# royal-mail-address

./: .gitignore  README.md  Royal_Mail_Address_V1_(REST)-1.0.9.json  V3 CONVERTED Royal_Mail_Address_V1_(REST)-1.0.9-openapi3.json  pyproject.toml  pyproject1.toml
docs/: AddressFindRequestDef.md  AddressRecordDef.md  AddressSummaryDef.md  AddressVerifyReqRespdef.md  AddressVerifyRequestDef.md  AddressVerifydef.md  AddressesDef.md  DefaultApi.md  ErrorResponse.md  ErrorsDef.md  Model400.md  Model401.md  Model404.md  Model405.md  Model500.md  Model503.md
src/royal_mail_address/: __init__.py  api_client.py  configuration.py  rest.py
src/royal_mail_address/api/: __init__.py  default_api.py
src/royal_mail_address/models/: __init__.py  address_verify_req_respdef.py  address_verify_request_def.py  addresses_def.py  error_response.py  errors_def.py  model400.py  model401.py  model404.py  model405.py  model500.py  model503.py
src/royal_mail_address_codegen/: exceptions.py  rest.py
src/royal_mail_address_codegen/api/: __init__.py
src/royal_mail_address_codegen/models/: address_find_request_def.py  address_record_def.py  address_summary_def.py  address_verifydef.py  addresses_def.py  (+2 more)
test/: test_address_find_request_def.py  test_address_record_def.py  test_address_summary_def.py  test_address_verify_req_respdef.py  test_address_verify_request_def.py  test_address_verifydef.py  test_addresses_def.py  test_default_api.py  test_error_response.py  test_errors_def.py  test_model400.py  test_model401.py  test_model404.py  test_model405.py  test_model500.py  test_model503.py
