[project]
name = "royal-mail-address"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paw", email = "paw@pawrequest.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
royal-mail-address-codegen = "royal_mail_address_codegen:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
